# image_analysis_edge

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  analyseContour.pro  cmake_install.cmake  cvimagewidget.h
TP1_automoc.dir/: moc_cvimagewidget_6REP6JVGRRLDFO.cpp  moc_cvimagewidget_BOSRG36LSDHVKM.cpp  moc_mainwindow_BMDIVWC5MAP5U5.cpp  moc_mainwindow_L2CLFKCLUYECYY.cpp
src/: .directory  contourHandler.cpp  contourhandler.h  convolution.cpp  convolution.hpp  filter.cpp  filter.hpp  fonctions.cpp  fonctions.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
