cmake_minimum_required(VERSION 2.8)
project(TP1)
#add_custom_target(mytargetname ALL COMMAND ${CMAKE_COMMAND} -E make_directory ${directory})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin/")
find_package( OpenCV REQUIRED )
#include_directories("/Locals/OpenCV-3.2.0/include")
add_executable( TP1 src/main.cpp src/filter.cpp)
target_link_libraries( TP1 ${OpenCV_LIBS} )
