cmake_minimum_required(VERSION 2.8)
project(TP1)
#add_custom_target(mytargetname ALL COMMAND ${CMAKE_COMMAND} -E make_directory ${directory})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin/")
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
find_package(Qt5Widgets)
find_package(Qt5Core)
find_package(Qt5Gui)
find_package( OpenCV REQUIRED )
qt5_wrap_ui(UIS_HDRS
    src/mainwindow.ui
)
#include_directories("/Locals/OpenCV-3.2.0/include")
add_executable( TP1 WIN32 cvimagewidget.h src/main.cpp  src/mainwindow.cpp src/contourHandler.cpp src/convolution.cpp src/fonctions.cpp ${UIS_HDRS})
target_link_libraries( TP1 ${OpenCV_LIBS} Qt5::Widgets Qt5::Core Qt5::Gui)
